Complete inital headers

--- a/classwork/02-video-rental-store-system/CMakeLists.txt
+++ b/classwork/02-video-rental-store-system/CMakeLists.txt
@@ -7,4 +7,7 @@ add_executable(02_video_rental_store_system main.cpp
         Customer.h
         RentalItem.h
         Transaction.h
+        RentalSystem.h
+        Clerk.h
+        Manager.h
 )
