--- a/classwork/04-postal-service-system/screens/package.json
+++ b/classwork/04-postal-service-system/screens/package.json
@@ -8,7 +8,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node app.js"
+    "clean": "rm -rf dist",
+    "build": "npm run clean && tsc",
+    "start": "node dist/app.js",
+    "dev": "concurrently -k -n \"TS,SERVER\" -c \"cyan,green\" \"tsc --watch\" \"nodemon --watch 'dist' --exec 'node dist/app.js'\""
   },
   "dependencies": {
     "ejs": "^3.1.10",
@@ -18,8 +21,8 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.9",
+    "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
 }
