--- a/classwork/04-postal-service-system/web-application/package.json
+++ b/classwork/04-postal-service-system/web-application/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf dist",
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && tsc && tsc-alias",
     "start": "node dist/app.js",
-    "dev": "concurrently -k -n \"TS,SERVER\" -c \"cyan,green\" \"tsc --watch\" \"nodemon --watch 'dist' --exec 'node dist/app.js'\""
+    "dev": "concurrently -k -n \"TS,ALIAS,SERVER\" -c \"cyan,yellow,green\" \"tsc --watch\" \"tsc-alias --watch\" \"node --watch dist/app.js\""
   },
   "dependencies": {
     "ejs": "^3.1.10",
@@ -22,7 +22,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.9",
     "concurrently": "^9.1.2",
-    "nodemon": "^3.1.9",
+    "tsc-alias": "^1.8.11",
     "typescript": "^5.8.2"
   }
 }
