--- a/classwork/04-postal-service-system/web-application/tsconfig.json
+++ b/classwork/04-postal-service-system/web-application/tsconfig.json
@@ -111,5 +111,8 @@
     "noUnusedParameters": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "tsc-alias": {
+    "resolveFullPaths": true
+  }
 }
