--- a/classwork/04-postal-service-system/web-application/package.json
+++ b/classwork/04-postal-service-system/web-application/package.json
@@ -8,10 +8,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf build",
     "build": "npm run clean && tsc && tsc-alias",
-    "start": "node dist/app.js",
-    "dev": "concurrently -k -n \"TS,ALIAS,SERVER\" -c \"cyan,yellow,green\" \"tsc --watch\" \"tsc-alias --watch\" \"node --watch dist/app.js\""
+    "start": "node build/app.js",
+    "dev": "concurrently -k -n \"TS,ALIAS,SERVER\" -c \"cyan,yellow,green\" \"tsc --watch\" \"tsc-alias --watch\" \"node --watch build/app.js\""
   },
   "dependencies": {
     "ejs": "^3.1.10",
