--- a/classwork/04-postal-service-system/web-application/package.json
+++ b/classwork/04-postal-service-system/web-application/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf build",
     "build": "npm run clean && tsc && tsc-alias",
     "start": "node build/app.js",
-    "dev": "concurrently -k -n \"TS,ALIAS,SERVER\" -c \"cyan,yellow,green\" \"tsc --watch\" \"tsc-alias --watch\" \"node --watch build/app.js\""
+    "dev": "tsc && tsc-alias && concurrently -k -n \"TS,ALIAS,SERVER\" -c \"cyan,yellow,green\" \"tsc --watch\" \"tsc-alias --watch\" \"node --watch build/app.js\""
   },
   "dependencies": {
     "ejs": "^3.1.10",
