--- a/lab/02-employee-mgmt-system/package.json
+++ b/lab/02-employee-mgmt-system/package.json
@@ -16,12 +16,15 @@
     "initiatedb": "npm run dbsetup && npm run dbtables"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.14.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.13.17",
+    "@types/pg": "^8.11.11",
     "concurrently": "^9.1.2",
     "typescript": "^5.8.2",
     "wait-on": "^8.0.3"
