--- a/lab/01-postal-system/package.json
+++ b/lab/01-postal-system/package.json
@@ -1,28 +1,32 @@
 {
   "name": "postal-system",
   "version": "1.0.0",
-  "description": "Frontend for OOP Postal System",
+  "description": "OOP Postal System",
   "license": "ISC",
   "author": "Andres Hung",
   "type": "module",
-  "main": "app.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf build",
-    "build": "npm run clean && tsc && tsc-alias",
-    "start": "node build/app.js",
-    "dev": "tsc && tsc-alias && concurrently -k -n \"TS,ALIAS,SERVER\" -c \"cyan,yellow,green\" \"tsc --watch\" \"tsc-alias --watch\" \"node --watch build/app.js\""
+    "build": "npm run clean && tsc",
+    "start": "npm run build && node build/main.js",
+    "dev": "tsc && concurrently -k -n \"TS,NODE\" -c \"cyan,green\" \"tsc --watch\" \"wait-on build/main.js && node --watch build/main.js\"",
+    "dbsetup": "psql --username=postgres --file=src/db/scripts/setup.sql",
+    "dbtables": "psql --username=postal_user --dbname=cmps2232_postal_sys --file=src/db/scripts/tables.sql",
+    "initiatedb": "npm run dbsetup && npm run dbtables"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^5.1.0",
+    "pg": "^8.14.1"
   },
   "devDependencies": {
-    "@types/ejs": "^3.1.5",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.13.9",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.13.17",
+    "@types/pg": "^8.11.11",
     "concurrently": "^9.1.2",
-    "tsc-alias": "^1.8.11",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "wait-on": "^8.0.3"
   }
 }
